[package]
authors = ["Brian DeBoer <bdeboer@noreply.com>"]
description = """
Provides cursor based pagination for the native MongoDB driver in Rust.
"""
edition = "2018"
keywords = ["mongo", "mongodb", "database", "cursor", "pagination"]
license = "MIT"
name = "mongodb-cursor-pagination"
readme = "README.md"
repository = "https://github.com/briandeboer/mongodb-cursor-pagination"
version = "0.2.9"

[features]
default = []
graphql = ["juniper"]

[dependencies]
base64 = "0.21.0"
bson = "2.4.0"
futures = "0.3.25"
juniper = {version = "0.14.2", optional = true}
log = "0.4.11"
mongodb = "2.3.1"
serde = "1.0"
tokio = "1.21.2"

[dev-dependencies]
tokio-test = "0.4.2"
